bug(fix-id-filter): fix bug of incrementing id
* fix bug of incrementing user/trip/booking ids

* make trip unique
[Finishes #167806395]
