# server/api-docs/v1/swagger.json
@@ -131,7 +131,7 @@
         }
       }
     },
-    "/bookings/{bookingId}" : {
+    "/bookings/{id}" : {
       "get" : {
         "tags" : [ "bookings" ],
         "summary" : "Get a booking by ID",
@@ -146,7 +146,7 @@
           "type": "string"
         },
         {
-          "name" : "bookingId",
+          "name" : "id",
           "in" : "path",
           "description" : "ID of the booking to get",
           "required" : true,
@@ -182,7 +182,7 @@
           "type": "string"
         },
         {
-          "name" : "bookingId",
+          "name" : "id",
           "in" : "path",
           "description" : "ID of booking to be deleted",
           "required" : true,
@@ -216,7 +216,7 @@
           "type": "string"
         },
         {
-          "name" : "bookingId",
+          "name" : "id",
           "in" : "path",
           "description" : "ID of booking to be updated",
           "required" : true,
@@ -300,7 +300,7 @@
         }
       }
     },
-    "/trips/{tripId}" : {
+    "/trips/{id}" : {
       "get" : {
         "tags" : [ "trips" ],
         "summary" : "Get a trip by ID",
@@ -315,7 +315,7 @@
           "type": "string"
         },
         {
-          "name" : "tripId",
+          "name" : "id",
           "in" : "path",
           "description" : "ID of trip to return",
           "required" : true,
@@ -348,7 +348,7 @@
           "type": "string"
         },
         {
-          "name" : "tripId",
+          "name" : "id",
           "in" : "path",
           "description" : "ID of trip to be deleted",
           "required" : true,
@@ -382,7 +382,7 @@
           "type": "string"
         },
         {
-          "name" : "tripId",
+          "name" : "id",
           "in" : "path",
           "description" : "ID of trip to be updated",
           "required" : true,
@@ -414,7 +414,7 @@
         }
       }
     },
-    "/trips/{tripId}/cancel" : {
+    "/trips/{id}/cancel" : {
       "patch" : {
         "tags" : [ "trips" ],
         "summary" : "Cancel a trip by ID",
@@ -430,7 +430,7 @@
           "type": "string"
         },
         {
-          "name" : "tripId",
+          "name" : "id",
           "in" : "path",
           "description" : "ID of trip to be cancelled",
           "required" : true,
